# telegram-bot-template

./: .env  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  cargo-generate.toml
src/: config.rs  error.rs  lib.rs  main.rs  messages.rs  run.rs
