[package]
name = "telegram-bot-template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
teloxide = { version = "0.17", features = ["macros", "webhooks-axum"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
